<resources>
    <string name="app_name">UberApp</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="title_activity_driver_maps">Map</string>

        <string name="enter_no">Enter your mobile number</string>
        <string name="phone_hint">Enter your mobile number</string>
        <string name="get_moving">Get moving with Uber</string>
        <string name="transition_arrow">transition_arrow</string>
        <string name="transition_tvMoving">transition_tvMoving</string>
        <string name="transition_ivFlag">transition_ivFlag</string>
        <string name="transition_tvCode">transition_tvCode</string>
        <string name="transition_tvPhoneNo">transition_tvPhoneNo</string>
        <string name="transition_llPhone">transition_llPhone</string>
        <string name="welcome_back">Welcome back, sign in to continue</string>
        <string name="title_activity_maps">Map</string>
    </resources>
